--- a/views/partials/shop-header.hbs
+++ b/views/partials/shop-header.hbs
@@ -45,6 +45,7 @@
                                            
                                             <li><a href="/logout">logout</a></li>
                                             <li><a href="/orders">my orders</a></li>
+                                            <li><a href="/userProfile">my profile</a></li>
                       
                                         </ul>
                                     </li>
