--- a/views/partials/shop-header.hbs
+++ b/views/partials/shop-header.hbs
@@ -1,10 +1,10 @@
 <div id="preloader-active">
         <div class="preloader d-flex align-items-center justify-content-center">
             <div class="preloader-inner position-relative">
-                <div class="preloader-circle"></div>
+                <div class="preloader-circle"></div><a href="/shop">
                 <div class="preloader-img pere-text">
                     <img src="assets/img/logo/logo.png" alt="">
-                </div>
+                </div></a>
             </div>
         </div>
     </div>
@@ -17,7 +17,7 @@
                     <div class="menu-wrapper">
                         <!-- Logo -->
                         <div class="logo">
-                            <a href="index.html"><img src="assets/img/logo/logo.png" alt=""></a>
+                            <a href="/shop"><img src="assets/img/logo/logo.png" alt=""></a>
                         </div>
                         <!-- Main-menu -->
                         <div class="main-menu d-none d-lg-block">
@@ -35,8 +35,7 @@
                                             
                                            
                                             <li><a href="/logout">logout</a></li>
-                                            <li><a href="/orders">my orders</a></li>
-                                            <li><a href="/userprofile">my profile</a></li>
+                                           
                       
                                         </ul>
                                     </li>
@@ -65,7 +64,7 @@
                                 <li>
                                    
                                 </li>
-                                <li> <a href="login.html"><span class="flaticon-user"></span></a></li>
+                                <li> <a href="/userprofile"><span class="flaticon-user"></span></a></li>
                                 <li><a href="/cart"><span class="flaticon-shopping-cart"></span></a> </li>
                             </ul>
                         </div>
