--- a/views/user/index.hbs
+++ b/views/user/index.hbs
@@ -57,7 +57,6 @@
                     <div class="col-xl-7 col-lg-8 col-md-10">
                         <div class="section-tittle mb-70 text-center">
                             <h2>latest Items</h2>
-                            <p>Consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida.</p>
                         </div>
                     </div>
                 </div>
@@ -97,7 +96,7 @@
                 <!-- Button -->
                 <div class="row justify-content-center">
                     <div class="room-btn pt-70">
-                        <a href="catagori.html" class="btn view-btn1">View More Products</a>
+                        <a href="/shop" class="btn view-btn1">View More Products</a>
                     </div>
                 </div>
             </div>
@@ -144,7 +143,6 @@
                     <div class="col-xl-7 col-lg-8 col-md-10">
                         <div class="section-tittle mb-70 text-center">
                             <h2>Popular Items</h2>
-                            <p>Consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida.</p>
                         </div>
                     </div>
                 </div>
@@ -183,7 +181,7 @@
                 <!-- Button -->
                 <div class="row justify-content-center">
                     <div class="room-btn pt-70">
-                        <a href="catagori.html" class="btn view-btn1">View More Products</a>
+                        <a href="/shop" class="btn view-btn1">View More Products</a>
                     </div>
                 </div>
             </div>
@@ -195,17 +193,12 @@
                 <div class="row align-items-center">
                     <div class="col-lg-12">
                     <div class="video-wrap">
-                        <div class="play-btn "><a class="popup-video" href="https://www.youtube.com/watch?v=KMc6DyEJp04"><i class="fas fa-play"></i></a></div>
+                        <div class="play-btn "><a class="popup-video" href="https://www.youtube.com/watch?v=bU3MnLGMjdU"><i class="fas fa-play"></i></a></div>
                     </div>
                     </div>
                 </div>
                 <!-- Arrow -->
-                <div class="thumb-content-box">
-                    <div class="thumb-content">
-                        <h3>Next Video</h3>
-                        <a href="#"> <i class="flaticon-arrow"></i></a>
-                    </div>
-                </div>
+              
             </div>
         </div>
         <!-- Video Area End -->
@@ -216,8 +209,9 @@
                     <div class="col-lg-5 col-md-6">
                         <div class="watch-details mb-40">
                             <h2>Watch of Choice</h2>
-                            <p>Enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse.</p>
-                            <a href="shop.html" class="btn">Show Watches</a>
+                            <p>
+Watches: The epitome of timeless elegance and practicality. Adorn your wrist with these stylish timekeepers, meticulously crafted to keep you in sync with the rhythm of life. From sleek and minimalist designs to intricate and luxurious creations, watches transcend mere time-telling, becoming exquisite fashion statements..</p>
+                            <a href="/shop" class="btn">Show Watches</a>
                         </div>
                     </div>
                     <div class="col-lg-6 col-md-6 col-sm-10">
@@ -235,8 +229,9 @@
                     <div class="col-lg-5 col-md-6">
                         <div class="watch-details mb-40">
                             <h2>Watch of Choice</h2>
-                            <p>Enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse.</p>
-                            <a href="shop.html" class="btn">Show Watches</a>
+                            <p>
+Watches: Iconic timekeeping devices that effortlessly blend fashion and functionality. Worn on the wrist or carried in a pocket, watches offer a stylish way to stay punctual and organized. From classic analog designs to high-tech digital models, these versatile accessories have become timeless companions that complement any outfit or occasion</p>
+                            <a href="/shop" class="btn">Show Watches</a>
                         </div>
                     </div>
                 </div>
@@ -252,21 +247,18 @@
                             <div class="single-method mb-40">
                                 <i class="ti-package"></i>
                                 <h6>Free Shipping Method</h6>
-                                <p>aorem ixpsacdolor sit ameasecur adipisicing elitsf edasd.</p>
                             </div>
                         </div>
                         <div class="col-xl-4 col-lg-4 col-md-6">
                             <div class="single-method mb-40">
                                 <i class="ti-unlock"></i>
                                 <h6>Secure Payment System</h6>
-                                <p>aorem ixpsacdolor sit ameasecur adipisicing elitsf edasd.</p>
                             </div>
                         </div> 
                         <div class="col-xl-4 col-lg-4 col-md-6">
                             <div class="single-method mb-40">
                                 <i class="ti-reload"></i>
                                 <h6>Secure Payment System</h6>
-                                <p>aorem ixpsacdolor sit ameasecur adipisicing elitsf edasd.</p>
                             </div>
                         </div>
                     </div>
