--- a/views/user/login.hbs
+++ b/views/user/login.hbs
@@ -35,7 +35,7 @@
                   id="email"
                   name="email"
                   value=""
-                  placeholder="Username"
+                  placeholder="email Id"
                   required
                 />
               </div>
